src/test/ui/issues/issue-4265.stderr
error[E0201]: duplicate definitions with name `bar`:
  --> $DIR/issue-4265.rs:10:5
   |
LL |     fn bar() {
   |     -------- previous definition of `bar` here
...
LL |     fn bar() {
   |     ^^^^^^^^ duplicate definition

error: aborting due to previous error

For more information about this error, try `rustc --explain E0201`.
